--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </section>
         
         <section class="cta">
-            <a href="#" class="btn">Get Started with MapKing</a>
+            <a href="#" onclick="loadPage('ozp_map.html') class="btn">Get Started with MapKing</a>
         </section>
     </main>
     
